samples/_failures_safe/1761528124_765f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a677b3d.c: In function ‘next_token’:
./samples/SAFE/__tmp_1a677b3d.c:143:9: error: expected declaration or statement at end of input
  143 |         token.value[1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_1a677b3d.c:143:9: error: expected declaration or statement at end of input
